fix mobile bugs like popup window appearing offscreen, buttons being positioned incorrectly, etc

--- a/test/css/mobile.css
+++ b/test/css/mobile.css
@@ -3,7 +3,7 @@ body {
 }
 
 .panel {
-    height: 4.5vh;
+    height: 5vh;
     font-size: 2.5vh;
     .widget {
         margin: 0.5rem;
@@ -28,10 +28,12 @@ body {
 
 .window { 
     width: 100vw;
-
+    height: 95vh;
     left: 0;
-    top: 4.5vh;
+    top: 5vh;
+    overflow: hidden;
 }
+
 .window::after {
     display: inline-block;
     width: 100vw;
@@ -41,6 +43,10 @@ body {
     content: " "
 }
 
+.window .titlebar {
+    position: relative;
+    height: 2rem;
+}
 .window .content {
     background-color: rgb(var(--bg2), 0.90);;
 }
@@ -50,7 +56,7 @@ body {
         background-color: transparent;
     }
     .content {
-        transform: translate(5vw, 15vh);
+        transform: translate(5vw, 10vh);
         border: none;
         border-radius: 10vw;
         background-color: rgb(var(--bg2), 0.85);
@@ -60,15 +66,12 @@ body {
         padding-top: 5ch;
 
         gap: 0;
-        
     }
     .titlebar p {
-        position: absolute; 
-        top: 30%;
-        left: 50%;
+        position: absolute;
+        top: 17vh;
         z-index: 10000;
         font-size: 2rem;
-        
     }
 
 }
@@ -79,22 +82,27 @@ body {
 
 .popup-window { 
     width: 80%;
+    left: 10%;
+    top: 30%;
     gap: 0;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
 }
 .popup-window .content {
     height: 15rem;
+    background-color: rgb(var(--bg2));
     p {
-        width: 70%;    
-        background-color: transparent;
-        padding: 0;
+        width: 70%;  
+        border-radius: 10vw;  
     }
 }
 .popup-buttons {
     position:relative;
     transform: translateY(-100%)
+}
+.popup-window .titlebar {
+
+    .close-btn {
+        display: none;
+    }
 }
 .popup-window::after {
     display: inline;
@@ -116,7 +124,7 @@ body {
 }
 
 .content {
-    height: calc(100vh - 10rem);
+    height: 84vh;
     backdrop-filter: blur(3px); 
     -webkit-backdrop-filter: blur(3px); /* for safari */
 
@@ -126,17 +134,10 @@ body {
         align-content: center;
     }
 }
-.iphone .content {
-    height: 88vh;
-}
-
-
-
-
 
 .close-btn {
-    top: 85vh;
-
+    top: 89vh;
+    transform: translateY(10%);
     aspect-ratio: 1;
     width: 5vh;
 
@@ -150,9 +151,8 @@ body {
         color: white;
     }
 }
-.iphone .titlebar .close-btn {
-    top: 92vh;
-    
+.projects-window .titlebar .close-btn, .socials-window .titlebar .close-btn {
+    transform: translateY(-100%);
 }
 
 .app-icon#connect4 {
